--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500;600;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -68,6 +70,9 @@ textarea::placeholder {
 button {
     border: none;
 }
+
+/* font-family: 'Fira Sans', sans-serif;
+font-family: 'Rubik', sans-serif; */
 
 /* :root {
     --colorPrimary: #292B75;
