--- a/css/spacing.css
+++ b/css/spacing.css
@@ -2,7 +2,7 @@
  * File Type: Custom Spacing (margin and padding) classes
  * Author: Mahamudul Hassan Sazal
  * Author Website: http://www.freelancersazal.com
- * Author Email: freelancersazal@gmail.com
+ * Author Email: sazal1912@gmail.com
  */
 
  
