--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,60 +1,11 @@
-@media (min-width: 1200px) and (max-width: 1399.99px) {
-    
-      
- 
-  
-}
+@media (min-width: 1400px) {}
 
+@media (min-width: 1200px) and (max-width: 1399.99px) {}
 
+@media (min-width: 992px) and (max-width: 1199.99px) {}
 
-@media (min-width: 992px) and (max-width: 1199.99px) {
-    
-      
- 
-  
-}
+@media (min-width: 768px) and (max-width: 991.99px) {}
 
+@media (min-width: 576px) and (max-width: 767.99px) {}
 
-
-@media (min-width: 768px) and (max-width: 991.99px) {
-    
-      
- 
-  
-}
-
-
-
-
-
-@media (min-width: 576px) and (max-width: 767.99px) {
-    
-      
- 
-  
-}
-
-
-
-
-
-@media (max-width: 575.99px) {
-    
-      
- 
-  
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media (max-width: 575.99px) {}
