home page updated

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,46 @@ p,
 span {
   font-size: 16px;
   font-weight: 400;
+  margin: 0;
+  padding: 0;
   color: var(--paraColor);
+}
+
+body {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+img {
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover !important;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 13px 20px;
+  outline: none;
+  resize: none;
+  font-weight: 400;
+  border: 1px solid #e8e8e8;
+  border-radius: 5px;
+  font-size: 16px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: #a6a6ac;
+}
+
+button {
+  border: none;
+  outline: none;
 }
 
 :root {
@@ -81,19 +120,64 @@ span {
   background: var(--colorBlack);
 }
 
+.play_btn {
+  width: 55px;
+  height: 55px;
+  line-height: 50px;
+  text-align: center;
+  background: var(--colorWhite);
+  border: 3px solid var(--colorPrimary);
+  color: var(--colorPrimary);
+  border-radius: 50%;
+  position: relative;
+}
+
+.play_btn::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: var(--colorPrimary);
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  z-index: -1;
+  animation: play_animate 1.3s infinite;
+  -webkit-animation: play_animate 1.3s infinite;
+}
+
+@keyframes play_animate {
+  from {
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
+
+  to {
+    transform: scale(1.8);
+    opacity: 0;
+    -webkit-transform: scale(1.8);
+    -moz-transform: scale(1.8);
+    -ms-transform: scale(1.8);
+    -o-transform: scale(1.8);
+  }
+}
+
 .tf_common_heading h3 {
   font-size: 24px;
   font-weight: 700;
   font-family: var(--paraFont);
   color: var(--colorPrimary);
   text-transform: uppercase;
+  margin-bottom: 5px;
 }
 
 .tf_common_heading h1 {
   font-size: 45px;
   font-weight: 700;
-  margin-top: 10px;
-  margin-bottom: 40px;
   text-transform: capitalize;
 }
 
@@ -253,6 +337,11 @@ span {
   top: 50px;
   left: 0;
   width: 100%;
+  transition: all linear .3s;
+  -webkit-transition: all linear .3s;
+  -moz-transition: all linear .3s;
+  -ms-transition: all linear .3s;
+  -o-transition: all linear .3s;
 }
 
 .tf_main_manu .navbar-brand {
@@ -425,6 +514,13 @@ span {
   -o-transform: scale(1.15);
 }
 
+.menu_fix {
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  box-shadow: 0px 4px 8px rgb(0 0 0 / 7%);
+}
+
 /* menu end */
 
 /* banner start */
@@ -445,7 +541,6 @@ span {
   justify-content: center;
   align-items: start;
   padding-top: 137px;
-  /* height: 100% !important; */
 }
 
 .tf_banner_text h3 {
@@ -466,11 +561,8 @@ span {
 
 .tf_banner_text p {
   font-size: 20px;
-  margin-bottom: 30px;
-}
-
-.tf_banner_text ul {
-  padding-left: 0;
+  margin-top: 10px;
+  margin-bottom: 40px;
 }
 
 .banner_btn {
@@ -484,18 +576,33 @@ span {
 
 
 /* about start */
-.tf_about_text {
-  padding: 75px 52px 0px 25px;
+.tf_about_text {}
+
+.tf_about_img {
+  height: 660px;
 }
 
-.play_btn {
-  width: 80px;
-  height: 80px;
-  background: var(--colorPrimary);
-  border-radius: 50%;
-  position: relative;
-  display: inline-block;
+.tf_about_text {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
 }
+
+.tf_about_text p {
+  margin-top: 10px;
+}
+
+.tf_about_text ul {
+  margin-top: 50px;
+}
+
+.tf_about_text ul li .tf_common_btn {
+  margin-right: 40px;
+}
+
+
 
 /* about end */
 
@@ -517,9 +624,6 @@ span {
 }
 
 .tf_single_service img {
-  width: 100% !important;
-  height: 100%;
-  object-fit: cover !important;
   transition: all linear .3s;
   -webkit-transition: all linear .3s;
   -moz-transition: all linear .3s;
